@startuml
title Voltage-Control Runtime Object Model

class vc_ctx <<singleton facade>> {
  runtime : vc_runtime*
}

class vc_runtime <<single writer>> {
  controller : vc_controller*
  command_queue : k_msgq
  wake : k_sem
  lock : k_mutex
  lifecycle : atomic
}

class vc_controller <<canonical state>> {
  channels[VC_MAX_CHANNELS]
  channel_count : size_t
  operating_mode
  system_config
}

class vc_channel <<canonical state>> {
  config
  calibration_config
  measurements
  runtime_state
  faults
}

class reg_descriptor <<static>>

vc_ctx --> vc_runtime
vc_runtime --> vc_controller
vc_controller "1" *-- "1..16" vc_channel
reg_descriptor --> vc_controller : global fields
reg_descriptor --> vc_channel : channel fields
@enduml
